<?xml version="1.0"?>
<package format="2">
  <name>ada_assistance_policy</name>
  <version>0.0.0</version>
  <description>
    The ada_assistance_policy package which implements research code 
    for testing shared autonomy policies on ada.
  </description>

  <author email="sjavdani@cmu.edu">Shervin Javdani</author>
  <maintainer email="sjavdani@cmu.edu">Shervin Javdani</maintainer>


  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <!--
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  -->

  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>ada_teleoperation</depend>

</package>
